--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -621,4 +621,10 @@
   .lightningindexstat {
     color: red;
   }
+  #lightningindexstatbox {
+    width: 90%;
+    margin: 0 auto;
+    background-color: white;
+    border: 1px solid #03a9f4;
+  }
 }
