anonymous votes lightning

--- a/app/views/lightnings/index.html.erb
+++ b/app/views/lightnings/index.html.erb
@@ -57,7 +57,7 @@
                 <%= image_tag("Heart-128-red.png", size: "22", alt: "Heart", class: "lightindexresult-icon") %>
                 <span class="lightningindexdata"><%= game.hearts %></span>
               </div>
-              <span class="lightninglistcategory"><%= game.whovoted %> has voted!</span>
+              <span class="lightninglistcategory">New vote!</span>
             </div>
           <% end %></span>
         <br>
