--- a/app/views/lightnings/voteonly.html.erb
+++ b/app/views/lightnings/voteonly.html.erb
@@ -101,7 +101,7 @@
     </div>
     <script>
     $("#seeauthors").click(function() {
-      $(".lightvote-icon").addClass("disabled");
+      $(".lightvote-icon").parent().addClass("disabled");
       $(".lightningvoteauthor").removeClass("hidden");
       $(".lightningvoteauthor").addClass("animated flipInY");
     })
