--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -122,6 +122,20 @@
     font-size: 90%;
     border: 0;
   }
+  .censoroff {
+    float: right;
+    width: 110px !important;
+    padding: 4px !important;
+    font-size: 90%;
+    border: 0;
+  }
+  .censoron {
+    float: right;
+    width: 110px !important;
+    padding: 4px !important;
+    font-size: 90%;
+    border: 0;
+  }
 
   /* GROUP PAGES */
   #newgrouplink {
