--- a/app/views/lightnings/voteonly.html.erb
+++ b/app/views/lightnings/voteonly.html.erb
@@ -11,7 +11,11 @@
   <% @lightning.shuffle.first(3).zip(@idnumbers).each do |lightning, n| %>
     <span class="lightninggamecategories"><%= lightning.category %></span>
     <span class="lightninggameletters"> (<%= lightning.letters %>)</span><br>
-    <span class="lightninganswer">"<%= lightning.answer %>"</span>
+    <% if current_user.censoron == true %>
+      <span class="lightninganswer">"<%= Obscenity.replacement(:stars).sanitize(lightning.answer) %>"</span>
+    <% else %>
+      <span class="lightninganswer">"<%= lightning.answer %>"</span>
+    <% end %>
     <span class="lightningvoteauthor hidden"> - written by <%= User.where(:id => lightning.user_id).first.username %></span>
     <br>
 
