lightning to play mode

--- a/app/assets/javascripts/page/lightningvote.js.erb
+++ b/app/assets/javascripts/page/lightningvote.js.erb
@@ -122,10 +122,8 @@ else {
 
 $("#lightningvotetoplay").click(function() {
   $.ajax({
-          url: "/lightnings/switchplayvote",
-          type: "POST",
-          data: {playvote: 'play'},
-          dataType: 'script'
+          url: "/lightnings/switchvoteplay",
+          type: "POST"
         });
 });
 
