--- a/app/views/lightnings/index.html.erb
+++ b/app/views/lightnings/index.html.erb
@@ -75,6 +75,7 @@
             url: "/lightnings/resetvoteddata",
             type: "POST"
           });
+        $(".lightningnumber").hide();
       })
       </script>
       <br>
