--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -113,7 +113,21 @@
     margin-bottom: -6px;
   }
   .topbar-messagebutton {
-    margin-top: 2px;
+    margin-top: 4px;
+  }
+  .lightningnumber {
+    background-color: red;
+    font-size: 12px;
+    font-weight: 600;
+    color: white;
+    padding: 1px;
+    border-radius: 4px;
+    z-index: 10;
+    position: relative;
+    top: -18px;
+    right: 15px;
+    text-align: center;
+    margin: 0 5px;
   }
   .tooltips {
     width: 300px;
