--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -129,6 +129,22 @@
     text-align: center;
     margin: 0 5px;
   }
+  .lightningnumberbottom {
+    background-color: red;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
+    padding: 1px 1px 1px 4px;
+    border-radius: 4px;
+    z-index: 10;
+    position: relative;
+    top: -8px;
+    right: 69px;
+    text-align: center;
+  }
+  .graphiclink a {
+    text-decoration: none
+  }
   .tooltips {
     width: 300px;
     margin: 0 auto;
