lightning bottom bar

--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -141,6 +141,7 @@
     top: -8px;
     right: 69px;
     text-align: center;
+    margin-right: -18px;
   }
   .graphiclink a {
     text-decoration: none
