--- a/app/views/lightnings/index.html.erb
+++ b/app/views/lightnings/index.html.erb
@@ -76,6 +76,7 @@
             type: "POST"
           });
         $(".lightningnumber").hide();
+        $(".lightningnumberbottom").hide();
       })
       </script>
       <br>
